<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/volume_browser_menu_paste"
        android:icon="?attr/menuIconPaste"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_paste"
        android:visible="false"/>
    <item
        android:id="@+id/volume_browser_menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/volume_browser_menu_import"
        android:icon="@drawable/ic_menu_import_file"
        android:title="@string/menu_import_files"/>
    <item
        android:id="@+id/volume_browser_menu_import_external"
        android:icon="@drawable/ic_menu_import_file"
        android:title="@string/import_external_storage"/>
    <item
        android:id="@+id/volume_browser_menu_mkdir"
        android:icon="@drawable/ic_menu_newfolder"
        android:title="@string/menu_newfolder"/>
    <item
        android:id="@+id/volume_browser_menu_createfile"
        android:icon="@drawable/ic_file"
        android:title="@string/menu_newfile"/>
    <item
        android:id="@+id/volume_browser_menu_syncfolder"
        android:icon="@drawable/ic_menu_import_file"
        android:title="@string/menu_syncfolder"/>
    <item
        android:id="@+id/volume_browser_menu_saveHere"
        
        android:showAsAction="ifRoom|withText"
        android:title="@string/save_here"
        android:visible="false"/>
    
        <item
        android:id="@+id/volume_browser_generate_thumbnails"
        android:title="@string/generate_thumbnails"
        android:visible="true"/>
        
        <item
        android:id="@+id/volume_browser_generate_thumbnails_vid"
        android:title="@string/generate_thumbnails_vid"
        android:visible="true"/>  
              
        <item
        android:id="@+id/volume_browser_exit"
        android:title="@string/exit"/>

</menu>