<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="cache_key"
        android:summary="@string/save_pass_sum_str"
        android:title="@string/save_pass_title_str" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="auto_import"
        android:summary="@string/auto_import_pref_sum_str"
        android:title="@string/auto_import_pref_title_str" />

   	  <Preference android:title="@string/setSyncRules"
                android:key="@string/setSyncRules"
                android:summary="@string/setSyncRules"/>
    
	 <Preference android:title="@string/setApplicationPinCode"
                android:key="@string/setApplicationPinCode"
                android:summary="@string/setApplicationPinCode"/>

</PreferenceScreen>